# VEPS

./: .gitignore  README.md  pyproject.toml
config/: config.no-bert.yaml  config.yaml
data/raw/: README.md  cve_mentions.sample.json  cve_observations.sample.csv
notebooks/: 01_distilbert_training.ipynb  02_model_training.ipynb
src/scripts/: run_daily_pipeline.py
src/scripts/data/: download_data.py
src/scripts/distilbert/: extract_distilbert_training.py  predict_nvd_data.py  train_cvss_cwe.py
src/scripts/veps/: create_training_set.py  extract_features.py  hyperparameter_tuning.py  prediction.py  train_pipeline.py
src/veps/: cli.py  config.py  daily.py  paths.py
src/veps/data/: distilbert_corpus_builder.py  download_nvd.py  exploit_training_builder.py  feature_extraction.py  nvd_enrichment.py  prediction_cache.py  schemas.py
src/veps/distilbert/: base.py  cvss.py  cwe.py  predict.py  train.py
src/veps/exploit_model/: calibration.py  data_manager.py  features.py  parameter_tuning.py  pipeline.py  predict.py  train.py
src/veps/lib/data/: distilbert_training_extractor.py  download_nvd.py  feature_extraction.py  nvd_processor.py  preprocessing.py
src/veps/lib/models/distilbert/: base.py  predict.py
src/veps/lib/models/distilbert/cvss/: classifier.py  dataset.py  prediction.py  trainer.py
src/veps/lib/models/distilbert/cwe/: classifier.py  dataset.py  prediction.py  trainer.py
src/veps/lib/models/veps/: config.py  data_manager.py  parameter_tuning.py  pipeline.py  predict.py
