[project]
name = "veps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
    "pydantic",
    "pyyaml",
    "optuna",
]

[project.optional-dependencies]
distilbert = [
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "cvss",
]
[project.scripts]
veps = "veps.cli:main"

[dependency-groups]
dev = ["pyright", "ruff", "pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veps"]
